# command-bar-functions

./: README.md
generate_password/: Cargo.toml
generate_password/src/: lib.rs
open_github_profile/: Cargo.toml
open_github_profile/src/: lib.rs
open_notepad/: Cargo.toml
open_notepad/src/: lib.rs
