[package]
name = "open_notepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.125"
serde = "1.0.137"
serde_json = "1.0.81"
egnitely-client = { git="https://github.com/egnitely/egnitely-client-lib.git", version="0.1.0" }
tokio = {version = "1.18.2", features = ["full"]}